# ssz-gen

./: .gitignore  .justfile  Cargo.toml  README.md  rust-toolchain.toml  test_bytes32.ssz  test_generic_gen.rs  test_generics.ssz  test_simple_generic.ssz  test_strata_schema.ssz  zizmor.yml
.github/workflows/: cron-zizmor.yml  docs.yml  lint.yml  release.yml  security.yml  unit.yml  zizmor.yml
crates/sizzle-parser/: Cargo.toml  README.md
crates/sizzle-parser/src/: ast.rs  builtins.rs  gobbler.rs  lib.rs  names.rs  pipeline.rs  schema.rs  src_pos.rs  token.rs  token_tree.rs  ty_resolver.rs  tysys.rs
crates/sizzle-parser/tests/: import_test.ssz
crates/ssz/: Cargo.toml
crates/ssz/examples/: large_list.rs  large_list_of_structs.rs  struct_definition.rs
crates/ssz/src/: bitfield.rs  decode.rs  encode.rs  layout.rs  legacy.rs  lib.rs  primitives.rs  union_selector.rs  view.rs
crates/ssz/src/bitfield/: bitvector_dynamic.rs
crates/ssz/src/decode/: impls.rs  try_from_iter.rs
crates/ssz/src/encode/: impls.rs
crates/ssz/src/serde_utils/: hex.rs  mod.rs
crates/ssz/tests/: tests.rs  view_vectorref.rs
crates/ssz_codegen/: Cargo.toml  README.md
crates/ssz_codegen/src/: codegen.rs  derive_config.rs  files.rs  lib.rs  pragma.rs
crates/ssz_codegen/src/types/: mod.rs  resolver.rs
crates/ssz_codegen/tests/: bitvector_length_test.rs  derives.toml  nested_fixed_container_view.rs  stable_container_profile_view.rs  tests.rs  to_owned_ssz_integration.rs
crates/ssz_codegen/tests/expected_output/: test_1.rs  test_1_view_hash.rs  test_2.rs  test_2_view_hash.rs  test_bitfields.rs  test_bitvector_len.rs  test_bitvector_len_optional.rs  test_comments.rs  test_constants.rs  test_container_in_list.rs  test_cross_entry_flat.rs  test_cross_entry_local.rs  test_cross_entry_nested.rs  test_cross_entry_single.rs  test_custom_to_owned.rs  test_default_nested.rs  test_derives.rs  test_derives_default.rs  test_derives_toml.rs  test_diamond_dependency.rs  test_docstrings.rs  test_duplicate_entry.rs  test_existing_rust_module.rs  test_explicit_nested.rs  test_external.rs  test_external_container.rs  test_external_container_union.rs  test_external_pragma.rs  test_external_ref_variants.rs  test_flat_modules.rs  test_generic_aliases.rs  test_generics.rs  test_import.rs  test_large_unions.rs  test_multiple_generic_params.rs  test_nested_aliases.rs  test_nested_fixed_container.rs  test_nested_generics.rs  test_order_1.rs  test_order_2.rs  (+24 more)
crates/ssz_codegen/tests/input/: test_1.ssz  test_2.ssz  test_anon_union.ssz  test_bitfields.ssz  test_bitvector_len.ssz  test_circular_a.ssz  test_circular_b.ssz  test_circular_dep.ssz  test_comments.ssz  test_common.ssz  test_container_in_list.ssz  test_cross_entry_common.ssz  test_cross_entry_local.ssz  test_cross_entry_state.ssz  test_cross_entry_update.ssz  test_custom_to_owned.ssz  test_derives.ssz  test_docstrings.ssz  test_duplicate_field_name.ssz  test_duplicate_item_name.ssz  test_existing_rust_module.ssz  test_external.ssz  test_external_container_union.ssz  test_external_inner.ssz  test_external_outer.ssz  test_external_pragma.ssz  test_external_ref_variants.ssz  test_generic_aliases.ssz  test_generics.ssz  test_import_1.ssz  test_import_2.ssz  test_large_unions.ssz  test_multi_import_a.ssz  test_multi_import_b.ssz  test_multi_import_base.ssz  test_multiple_generic_params.ssz  test_nested_aliases.ssz  test_nested_fixed_container.ssz  test_nested_generics.ssz  test_optional_field_container.ssz  (+25 more)
crates/ssz_derive/: Cargo.toml
crates/ssz_derive/src/: lib.rs
crates/ssz_derive/tests/: profile_encoding_test.rs  stable_container_complex_test.rs  stable_container_decode.rs  stable_container_test.rs  stable_container_varlen_test.rs  tests.rs  union_empty_encode_decode_test.rs
crates/ssz_primitives/: Cargo.toml
crates/ssz_primitives/src/: lib.rs
crates/ssz_types/: Cargo.toml
crates/ssz_types/benches/: view_vs_owned.rs
crates/ssz_types/src/: decode.rs  encode.rs  fixed_vector.rs  lib.rs  optional.rs  tree_hash.rs  variable_list.rs  view.rs
crates/ssz_types/src/serde_utils/: hex_fixed_vec.rs  hex_var_list.rs  list_of_hex_fixed_vec.rs  list_of_hex_var_list.rs  mod.rs  quoted_u64.rs  quoted_u64_fixed_vec.rs  quoted_u64_var_list.rs  quoted_u64_vec.rs
crates/ssz_types/tests/: lazy_view_integration.rs
crates/tree_hash/: Cargo.toml
crates/tree_hash/src/: impls.rs  lib.rs  merkle_hasher.rs  merkleize_padded.rs  merkleize_standard.rs
crates/tree_hash/tests/: test_vectors.rs  tests.rs  view_parity.rs
crates/tree_hash_derive/: Cargo.toml
crates/tree_hash_derive/src/: lib.rs
examples/: derive_example.ssz
