[package]
name = "sizzle-parser"
description = "Pythonic SSZ definition parser"
license = "MPL-2.0"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
