# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "ssz"
description = "SimpleSerialize (SSZ)"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "ssz"

[dev-dependencies]
ssz_derive.workspace = true
serde_json.workspace = true
ssz_primitives = { workspace = true, features = ["rand"] }

[dependencies]
arbitrary = { workspace = true, optional = true }
hex.workspace = true
itertools.workspace = true
serde.workspace = true
smallvec.workspace = true
ssz_primitives.workspace = true

[features]
arbitrary = ["dep:arbitrary"]
