# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "ssz"
description = "SimpleSerialize (SSZ)"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "ssz"

[dev-dependencies]
ssz_derive.workspace = true
serde_json.workspace = true
ssz_primitives = { workspace = true, features = ["rand"] }
serde.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
itertools.workspace = true
serde = { workspace = true, optional = true }
smallvec.workspace = true
ssz_primitives.workspace = true

[features]
default = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde", "dep:hex"]
