# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "ssz"
description = "SimpleSerialize (SSZ)"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "ssz"

[dependencies]
ssz_primitives.workspace = true

arbitrary = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
itertools.workspace = true
serde = { workspace = true, optional = true }
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
ssz_derive.workspace = true
ssz_primitives = { workspace = true, features = ["rand"] }

serde_json.workspace = true
serde.workspace = true

[features]
default = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde", "dep:hex"]
