# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "ssz_derive"
version = "0.9.0"
edition = "2021"
description = "Procedural derive macros to accompany the ssz crate"
license = "Apache-2.0"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "ssz_derive"
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
darling.workspace = true

[dev-dependencies]
ssz.workspace = true
ssz_types.workspace = true
