# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "ssz_derive"
description = "Procedural derive macros to accompany the ssz crate"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "ssz_derive"
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
darling.workspace = true

[dev-dependencies]
ssz.workspace = true
ssz_types.workspace = true
