# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "ssz_types"
description = "List, vector and bitfield types for SSZ"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
itertools.workspace = true
serde.workspace = true
serde_derive.workspace = true
ssz.workspace = true
tree_hash.workspace = true
typenum.workspace = true

[dev-dependencies]
serde_json.workspace = true
tree_hash_derive.workspace = true
