# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "tree_hash"
description = "Efficient Merkle-hashing"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
ssz.workspace = true
ssz_primitives.workspace = true

digest.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
tree_hash_derive.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
ssz_types.workspace = true

rand.workspace = true
