# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "tree_hash_derive"
version = "0.10.0"
edition = "2021"
description = "Procedural derive macros to accompany the tree_hash crate"
license = "Apache-2.0"
readme = "README.md"
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
darling.workspace = true
