# Modified in 2025 from the original version
# Original source licensed under the Apache License 2.0

[package]
name = "tree_hash_derive"
description = "Procedural derive macros to accompany the tree_hash crate"
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
quote.workspace = true
syn.workspace = true
